lspclient: also support some alternative WorkspaceEdit replies

BUG: 447640
BUG: 449332